@@ -1,9 +1,10 @@
 # CHANGELOG
 ##############
 
-
 Version 0.4.*: 
 -----------
+53: The pipeline fetches now its current version from the changelog file to display instead of having it hardcoded
+52: Updated the run script to avoid double definition of pipeline-folder
 51: report skeletons added for all modules
 50: Changed name to Snakebite-Holoruminant-MetaG
 49: Moved large parts of the README.md to dedicated files located in docs/ 
